Fixed scrollbar issue in help docs navigation for windows.

--- a/src/components/help/HelpGuideContainer.css
+++ b/src/components/help/HelpGuideContainer.css
@@ -105,3 +105,9 @@
   font-size: 20px;
   transition: none;
 }
+
+#helpMasterList {
+  overflow-x: visible;
+  padding: 0px 17px 0px 0px;
+  width: 260px;
+}
